crates/bsnext_html/tests/snapshots/html_playground__html_playground_content-3.snap
---
source: crates/bsnext_html/tests/html_playground.rs
expression: css.kind
---
Raw(
    Raw {
        raw: "p {\n    color: red;\n}\n\nabc-shane {\n    color: red;\n}\n",
    },
)
