crates/bsnext_html/tests/snapshots/html_playground__html_playground_content.snap
---
source: crates/bsnext_html/tests/html_playground.rs
expression: html.kind
---
Raw(
    Html {
        html: "\n<main>\n    <h1>Test!</h1>\n    <abc-shane></abc-shane>\n</main>\n",
    },
)
