crates/bsnext_html/tests/snapshots/html_playground__html_playground_with_meta-2.snap
---
source: crates/bsnext_html/tests/html_playground.rs
expression: found.kind
---
Dir(
    DirRoute {
        dir: "examples/basic/public",
        base: None,
    },
)
