crates/bsnext_html/tests/snapshots/html_playground__html_playground_with_meta.snap
---
source: crates/bsnext_html/tests/html_playground.rs
expression: found.path
---
PathDef {
    inner: "/",
}
