crates/bsnext_html/tests/snapshots/html_playground__html_playground_with_meta_default-2.snap
---
source: crates/bsnext_html/tests/html_playground.rs
expression: found2.kind
---
Dir(
    DirRoute {
        dir: ".",
        base: None,
    },
)
